# ZJU-Quantum-Compiler

./: .gitignore  AI-Collaboration.md  CLAUDE.md  LICENSE  README.md  WAKEUP.md  cleanup_and_setup.sh  colab_train.ipynb  colab_train_A_baseline.ipynb  colab_train_B_fallback.ipynb  colab_train_V10_Master.ipynb  colab_train_V11_DQN.ipynb  monitor.sh  monitor_dashboard.py  pyproject.toml  pytest.ini  requirements.txt  run_teacher_eval.sh  run_train_v13.sh  run_train_v14.sh  run_train_v9_20Q.sh  run_train_v9_20Q_fallback.sh  test_v4_mcts.py  train.py  workspace_rules.md
.agent_memory/: index.md
.tours/: README.md  refactor-2026-04-16.tour
configs/: v13_gpu.yaml  v14_baseline.yaml  v14_local_smoke.yaml  v14_micro_smoke.yaml  v15_baseline.yaml  v15_local_smoke.yaml  v9_baseline.yaml  v9_fallback.yaml
docs/: 03_AI协同日志.md  AutoDL_V12_训练验收报告.md  frontend_demo.html  index.html  task.md  交接文档.md  项目报告.md
models/: history_grid_3x3_5q.json  history_linear_5_5q.json  history_ring_5_5q.json  history_v2_grid_3x3.json  history_v2_linear_5.json  history_v3_gnn_linear_5.json  history_v3_grid_3x3.json  history_v3_linear_5.json  history_v7_linear_5.json  mcts_checkpoint.json  router_grid_3x3_5q.pt  router_linear_5_5q.pt  router_ring_5_5q.pt  router_v2_grid_3x3.pt  router_v2_linear_5.pt  router_v3_gnn_linear_5.pt  router_v3_grid_3x3.pt  router_v3_linear_5.pt  v7_linear_5.pt  v7_linear_5_best.pt
notebooks/: 01_train_v9_ppo_baseline.ipynb  02_train_v9_ppo_fallback.ipynb  03_train_v10_ppo_hardmask.ipynb  04_train_v11_dqn.ipynb  05_demo_v14_vs_sabre.ipynb
results/: ablation.json  ai_vs_sabre.json  ai_vs_sabre_real.json  baseline_sabre.json  evaluation_v7_linear_5.md
results_linear_5/: evaluation_v7_linear_5.md
results_ring_5/: evaluation_v7_ring_5.md
sandbox/: README.md
scripts/: eval_mqt_bench.py  eval_v12.py  eval_v12_ai.py  (+14 more)
(+113 files in other folders)
