[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zju-quantum-compiler"
version = "0.14.2"
description = "ZJU Quantum Circuit AI Compiler — RL-driven dynamic routing under complex topologies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ZJU Quantum Compiler Project", email = "qqyyqq812@users.noreply.github.com" },
]
keywords = ["quantum", "compiler", "reinforcement-learning", "qiskit", "sabre"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0",
    "qiskit>=2.0",
    "qiskit-aer>=0.13",
    "numpy>=1.24",
    "gymnasium>=1.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "rustworkx>=0.14",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.5", "black>=24.0"]

[project.urls]
Homepage = "https://github.com/qqyyqq812/ZJU-Quantum-Compiler"
Repository = "https://github.com/qqyyqq812/ZJU-Quantum-Compiler"
Issues = "https://github.com/qqyyqq812/ZJU-Quantum-Compiler/issues"

[project.scripts]
qcompiler = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "notebooks*", "models*", "results*", "logs*", "docs*", "configs*", ".venv*"]

[tool.setuptools.package-data]
"src" = ["py.typed"]
